# starform-rust

./: .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: accretion_disk.rs  accretion_parameters.rs  body.rs  consts.rs  lib.rs  main.rs  random.rs  star.rs  star_system.rs  types.rs
