[package]
name = "starform-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.15"
rand = "0.8"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.4.0"

[lib]
name = "starform_rust"
path = "src/lib.rs"

[[bin]]
name = "starform-rust"
path = "src/main.rs"

